--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -40,8 +40,6 @@ android {
 }
 
 dependencies {
-    // Local libraries - Youtube
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Annotation processors
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -54,10 +52,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:customtabs:27.0.2'
     implementation 'com.android.support:animated-vector-drawable:27.0.2'
-    // We only need Firebase for Push notifications!
-    implementation 'com.google.firebase:firebase-core:11.4.2'
-    implementation 'com.google.firebase:firebase-messaging:11.4.2'
-    // Other Google libraries for Youtube
+    // Push notifications
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    // Youtube
+    implementation fileTree(include: ['YouTubeAndroidPlayerApi.jar'], dir: 'libs')
     implementation('com.google.http-client:google-http-client-android:1.20.0')
             {
                 exclude group: 'org.apache.httpcomponents'
@@ -77,74 +76,74 @@ dependencies {
             }
     // Gamesparks backend
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
-    // General data-binding package for Jackson used for parsing of GS response in model - https://github.com/FasterXML/jackson-databind
+    // General data-binding package for Jackson used for parsing of GS response in model
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.0.pr1'
-    // Event Bus - we are using Greenrobot version! https://github.com/greenrobot/EventBus
+    // Event Bus
     implementation 'org.greenrobot:eventbus:3.0.0'
-    // Video chat is implemented with Twillio (it  resides on jcenter) - https://www.twilio.com/docs/api/video/download-video-sdks
+    // Video chat
     implementation 'com.twilio:video-android:1.3.0'
-    // Facebook SDK is used for Analytics, Share and to populate Sign up data - https://developers.facebook.com/docs/android/
+    // Facebook SDK is used for Analytics, Share and to populate Sign up data
     implementation 'com.facebook.android:facebook-android-sdk:4.24.0'
     compile('com.facebook.android:audience-network-sdk:4.24.0') {
         exclude group: 'com.google.android.gms'
     }
-    // Twitter KIT used for share functionality - https://github.com/twitter/twitter-kit-android
+    // Twitter KIT used for share functionality
     compile('com.twitter.sdk.android:twitter:2.3.2@aar') {
-        transitive = true;
+        transitive = true
     }
-    // Amazon web services are used for uploading of user generated media content - https://aws.amazon.com/mobile/sdk/
+    // Amazon web services are used for uploading of user generated media content
     implementation 'com.amazonaws:aws-android-sdk-core:2.4.2'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.4.2'
     // TODO @All - it should be replaced with more stable up to date library
-    // Circle Progress UI element used for Profile icon - https://github.com/lzyzsd/CircleProgress
+    // Circle Progress UI element used for Profile icon
     implementation 'com.github.lzyzsd:circleprogress:+'
-    // Swipe refresh layout used in Wall, News, Rumours and Chat fragments - https://github.com/omadahealth/SwipyRefreshLayout
+    // Swipe refresh layout used in Wall, News, Rumours and Chat fragments
     implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
-    // Expandable layout used in Join Chat fragment - https://github.com/AAkira/ExpandableLayout
+    // Expandable layout used in Join Chat fragment
     implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
-    // Permission handling library used around the project for easier handling of permissions - https://github.com/hotchemi/PermissionsDispatcher
+    // Permission handling library used around the project for easier handling of permissions
     implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
-    // Nice loading animations for Android - https://github.com/81813780/AVLoadingIndicatorView
+    // Nice loading animations for Android
     implementation 'com.wang.avi:library:2.1.3'
-    // Custom layout that can rotate it's view, used in Rumours-  https://github.com/rongi/rotate-layout
+    // Custom layout that can rotate it's view, used in Rumours
     implementation 'rongi.rotate-layout:rotate-layout:2.0.0'
     // TODO @All - Android O now supports downloadable fonts, explore this option instead of custom lib
-    // Custom fonts in Android -https://github.com/chrisjenx/Calligraphy
+    // Custom fonts in Android
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
-    // A small library containing a wrapper/helper for the Shared Preferences of android - https://github.com/Pixplicity/EasyPreferences
+    // A small library containing a wrapper/helper for the Shared Preferences of android
     implementation 'com.pixplicity.easyprefs:library:1.8.1@aar'
-    // Bind Android views and callbacks to fields and methods - https://github.com/JakeWharton/butterknife
+    // Bind Android views and callbacks to fields and methods
     implementation 'com.jakewharton:butterknife:8.8.1'
     // TODO @All - possibly outdated, check for alternative?
-    // Library for loading, caching and displaying images on Android - https://github.com/nostra13/Android-Universal-Image-Loader
+    // Library for loading, caching and displaying images on Android
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     // TODO @All - there should be an implementation of this in android, check if this library can be removed
-    // Circular ImageView for profile images - https://github.com/hdodenhof/CircleImageView
+    // Circular ImageView for profile images
     implementation 'de.hdodenhof:circleimageview:2.1.0'
-    // Checkout (Android In-App Billing Library) used for billing - https://github.com/serso/android-checkout
+    // Checkout (Android In-App Billing Library) used for billing
     implementation 'org.solovyev.android:checkout:1.0.0'
-    // SnappySmoothScroller - used for message scrolling - https://github.com/nshmura/SnappySmoothScroller
+    // SnappySmoothScroller - used for message scrolling
     implementation 'com.nshmura:snappysmoothscroller:1.0.0'
-    // Java library for working with real-world HTML used for share of content from web view - https://jsoup.org/download
+    // Java library for working with real-world HTML used for share of content from web view
     implementation 'org.jsoup:jsoup:1.10.2'
-    // Real time remote log tracking - https://bugfender.com/ TODO @Filip remove/disable for production
+    // Real time remote log tracking
     implementation 'com.bugfender.sdk:android:0.+'
-    // library for monitoring network connectivity, relies on rxJava - https://github.com/keiferstone/nonet
+    // library for monitoring network connectivity, relies on rxJava
     implementation 'com.keiferstone:nonet:2.0.0'
     implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.0'
-    // Random human readable name generator for testing - https://github.com/Atrox/haikunatorjava TODO @Filip remove for production
+    // Random human readable name generator for testing
     implementation 'me.atrox.haikunator:Haikunator:1.3'
     // Android Library to provide swipe, click and other functionality to RecyclerView
     implementation 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
-    // Apache commons library to extract file name from url for image downloading - https://mvnrepository.com/artifact/commons-io/commons-io
+    // Apache commons library to extract file name from url for image downloading
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
     // VideoView with controls
     implementation 'com.linsea:universalvideoview:1.1.0@aar'
-    // Image loader library - https://github.com/bumptech/glide/tree/3.0
+    // Image loader library
     implementation 'com.github.bumptech.glide:glide:4.2.0'
-    // Image loader library - https://github.com/square/picasso
+    // Image loader library
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    // Number picker used for translation popup to select language - https://github.com/ShawnLin013/NumberPicker
+    // Number picker used for translation popup to select language
     implementation 'com.shawnlin:number-picker:2.4.4'
 }
 
