--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -40,10 +40,7 @@ android {
 }
 
 dependencies {
-    // Annotation processors
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    // Google support libraries
+    // Android support libraries
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:appcompat-v7:27.0.2'
@@ -103,6 +100,7 @@ dependencies {
     implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
     // Permission handling library used around the project for easier handling of permissions
     implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
     // Nice loading animations for Android
     implementation 'com.wang.avi:library:2.1.3'
     // Custom layout that can rotate it's view, used in Rumours
@@ -113,9 +111,7 @@ dependencies {
     implementation 'com.pixplicity.easyprefs:library:1.8.1@aar'
     // Bind Android views and callbacks to fields and methods
     implementation 'com.jakewharton:butterknife:8.8.1'
-    // TODO @All - possibly outdated, check for alternative?
-    // Library for loading, caching and displaying images on Android
-    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     // TODO @All - there should be an implementation of this in android, check if this library can be removed
     // Circular ImageView for profile images
     implementation 'de.hdodenhof:circleimageview:2.1.0'
