--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -40,6 +40,12 @@ android {
     }
 }
 
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
+
 dependencies {
     // Android support libraries
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -139,6 +145,7 @@ dependencies {
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "org.jetbrains.anko:anko:0.10.4"
     // Architecture components
     implementation "android.arch.lifecycle:extensions:1.0.0"
 }
