--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -86,9 +86,10 @@ dependencies {
     // Gamesparks backend
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
     // JSON parsing
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0' // TODO: Remove
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0' // TODO: Remove
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0" // TODO: Remove
+    implementation 'com.beust:klaxon:2.0.11'
     // Event Bus
     implementation 'org.greenrobot:eventbus:3.0.0'
     // Video chat
