--- a/SportsSideKick/app/src/main/AndroidManifest.xml
+++ b/SportsSideKick/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:theme="@style/AppTheme"
         tools:replace="android:theme">
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name=".ui.MainActivity"
             android:configChanges="keyboardHidden|screenSize|orientation|layoutDirection"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
