--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -144,6 +144,9 @@ dependencies {
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "org.jetbrains.anko:anko:0.10.4"
+    // Architecture components
+    implementation "android.arch.lifecycle:extensions:1.0.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
