--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -46,7 +46,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile(
                     'proguard-android.txt'),
