--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -123,6 +123,8 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     // Custom layout that can rotate it's view, used in Rumours
     implementation 'rongi.rotate-layout:rotate-layout:2.0.0'
+    // Swipe to go back
+    implementation 'me.yokeyword:swipebackfragment:0.4.0'
     // Custom fonts
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     // A small library containing a wrapper/helper for the Shared Preferences of android
