--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -156,7 +156,8 @@ dependencies {
     // VideoView with controls
     implementation 'com.linsea:universalvideoview:1.1.0@aar'
     // Image loader library
-    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     // Number picker used for translation popup to select language
     implementation 'com.shawnlin:number-picker:2.4.4'
     // Kotlin
