--- a/SportsSideKick/build.gradle
+++ b/SportsSideKick/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url 'https://maven.fabric.io/public' }
         google()
     }
     dependencies {
@@ -12,6 +13,7 @@ buildscript {
         classpath 'com.google.gms:google-services:3.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+        classpath 'io.fabric.tools:gradle:1.25.1'
     }
 }
 
