--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -73,22 +73,10 @@ dependencies {
     // Youtube
     implementation fileTree(include: ['YouTubeAndroidPlayerApi.jar'], dir: 'libs')
     implementation('com.google.http-client:google-http-client-android:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
     implementation('com.google.api-client:google-api-client-android:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
     implementation('com.google.api-client:google-api-client-gson:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
     implementation files('libs/YoutubeAndroidPlayerApi.jar')
     implementation('com.google.apis:google-api-services-youtube:v3-rev181-1.22.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
     // Gamesparks backend
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
     // JSON parsing
@@ -101,9 +89,8 @@ dependencies {
     implementation 'com.twilio:video-android:1.3.0'
     // Facebook SDK is used for Analytics, Share and to populate Sign up data
     implementation 'com.facebook.android:facebook-android-sdk:4.24.0'
-    compile('com.facebook.android:audience-network-sdk:4.24.0') {
-        exclude group: 'com.google.android.gms'
-    }
+    // Facebook ads
+    implementation('com.facebook.android:audience-network-sdk:4.24.0')
     // Amazon web services are used for uploading of user generated media content
     implementation 'com.amazonaws:aws-android-sdk-core:2.4.2'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.4.2'
