--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -73,10 +73,22 @@ dependencies {
     // Youtube
     implementation fileTree(include: ['YouTubeAndroidPlayerApi.jar'], dir: 'libs')
     implementation('com.google.http-client:google-http-client-android:1.20.0')
+            {
+                exclude group: 'org.apache.httpcomponents'
+            }
     implementation('com.google.api-client:google-api-client-android:1.20.0')
+            {
+                exclude group: 'org.apache.httpcomponents'
+            }
     implementation('com.google.api-client:google-api-client-gson:1.20.0')
+            {
+                exclude group: 'org.apache.httpcomponents'
+            }
     implementation files('libs/YoutubeAndroidPlayerApi.jar')
     implementation('com.google.apis:google-api-services-youtube:v3-rev181-1.22.0')
+            {
+                exclude group: 'org.apache.httpcomponents'
+            }
     // Gamesparks backend
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
     // JSON parsing
@@ -125,9 +137,6 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
-    implementation 'com.github.VictorAlbertos:RxActivityResult:0.4.5-2.x'
     implementation "com.github.miguelbcr:RxPaparazzo:0.6.0-2.x"
     // Random human readable name generator for testing
     implementation 'me.atrox.haikunator:Haikunator:1.3'
