--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -65,7 +65,6 @@ dependencies {
     implementation 'com.android.support:percent:27.0.2'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:customtabs:27.0.2'
-    implementation 'com.android.support:animated-vector-drawable:27.0.2'
     // Push notifications
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     // Youtube
@@ -90,9 +89,9 @@ dependencies {
     // Gamesparks backend
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
     // JSON parsing
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
     // Event Bus
     implementation 'org.greenrobot:eventbus:3.0.0'
     // Video chat
@@ -100,7 +99,7 @@ dependencies {
     // Facebook SDK is used for Analytics, Share and to populate Sign up data
     implementation 'com.facebook.android:facebook-android-sdk:4.24.0'
     // Facebook ads
-    compile('com.facebook.android:audience-network-sdk:4.24.0') {
+    implementation ('com.facebook.android:audience-network-sdk:4.24.0') {
         exclude group: 'com.google.android.gms'
     }
     // Amazon web services are used for uploading of user generated media content
@@ -115,10 +114,6 @@ dependencies {
     // Permission handling library used around the project for easier handling of permissions
     implementation 'com.github.hotchemi:permissionsdispatcher:3.0.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
-    // Custom layout that can rotate it's view, used in Rumours
-    implementation 'rongi.rotate-layout:rotate-layout:2.0.0'
-    // Swipe to go back
-    implementation 'me.yokeyword:swipebackfragment:0.4.0'
     // Custom fonts
     implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
     // A small library containing a wrapper/helper for the Shared Preferences of android
