--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -69,23 +69,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     // Youtube
     implementation fileTree(include: ['YouTubeAndroidPlayerApi.jar'], dir: 'libs')
-    implementation('com.google.http-client:google-http-client-android:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
-    implementation('com.google.api-client:google-api-client-android:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
-    implementation('com.google.api-client:google-api-client-gson:1.20.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
+    implementation 'com.google.http-client:google-http-client-android:1.20.0'
+    implementation 'com.google.api-client:google-api-client-android:1.20.0'
+    implementation 'com.google.api-client:google-api-client-gson:1.20.0'
+    implementation 'com.google.apis:google-api-services-youtube:v3-rev181-1.22.0'
     implementation files('libs/YoutubeAndroidPlayerApi.jar')
-    implementation('com.google.apis:google-api-services-youtube:v3-rev181-1.22.0')
-            {
-                exclude group: 'org.apache.httpcomponents'
-            }
     // Gamesparks backend
     implementation 'com.gamesparks.sdk:gamesparks-java-sdk:0.4.4-SNAPSHOT'
     // JSON parsing
