--- a/SportsSideKick/app/build.gradle
+++ b/SportsSideKick/app/build.gradle
@@ -95,8 +95,6 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-s3:2.4.2'
     // Circle Progress UI element used for Profile icon
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
-    // Swipe refresh layout used in Wall, News, Rumours and Chat fragments
-    implementation 'com.github.orangegangsters:swipy:1.2.3@aar'
     // Expandable layout used in Join Chat fragment
     implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
     // Permission handling library used around the project for easier handling of permissions
@@ -130,7 +128,7 @@ dependencies {
     // Image loader library
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
-    // Number picker used for translation popup to select language
+    // Picker used for translation popup to select language
     implementation 'com.shawnlin:number-picker:2.4.4'
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
